@@ -1,5 +1,7 @@
 1.7.15.dev0
  * #399: Add a documentation troubleshooting note for MySQL/MariaDB authentication errors.
+ * #529: Remove upgrade-borgmatic-config command for upgrading borgmatic 1.1.0 INI-style
+   configuration.
  * #697, #712: Extract borgmatic configuration from backup via "bootstrap" action—even when
    borgmatic has no configuration yet!
  * #669: Add sample systemd user service for running borgmatic as a non-root user.
